# wave-table

./: .gitignore  CMakeLists.txt  README.md
include/: Circle.hpp  Line.hpp  Points.hpp  Table.hpp
src/: Circle.cpp  Line.cpp  Points.cpp  Table.cpp  main.cpp
